--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -2,48 +2,88 @@
 
     <div class="master-slider ms-skin-default" id="masterslider">
 
-        <!-- slide -->
-        <div class="ms-slide slide-1" data-delay="8">
-
-            <!-- slide background -->
-            <img src="{{ asset('site/assets/images/sliders/master/slide-bg1.jpg') }}" alt=""/>
-
-            <h1 class="ms-layer stext6"
-                style="left: 130px; top: 335px;"
-                data-type="text"
-                data-duration="900"
-                data-delay="1800"
-                data-ease="easeOutExpo"
-                data-effect="bottom(40)"
-            >
-                Tenha <strong><em>Controle Total</em></strong> Sobre sua Empresa{#<br>
+        {% if banners is not null %}
+            {% set i = 0 %}
+            {% for banner in banners %}
+                {% set i = i+1 %}
+                <!-- slide -->
+                <div class="ms-slide slide-{{ i }}" data-delay="8">
+                    <img src="{{ vich_uploader_asset(banner, 'imageFile') }}" alt=""/>
+                    <h1 class="ms-layer stext6"
+                        style="left: 130px; top: 335px;"
+                        data-type="text"
+                        data-duration="900"
+                        data-delay="1800"
+                        data-ease="easeOutExpo"
+                        data-effect="bottom(40)"
+                    >
+                        Tenha <strong><em>Controle Total</em></strong> Sobre sua Empresa{#<br>
                 <strong>Nós Temos a <em>Solução</em></strong>#}
-            </h1>
+                    </h1>
 
-            <h4 class="ms-layer stext7"
-                style="left: 130px; top: 420px;"
-                data-type="text"
-                data-duration="900"
-                data-delay="2500"
-                data-ease="easeOutExpo"
-                data-effect="bottom(40)"
-            >
-                <strong>Sistema de Gestão Empresarial para quem não tem tempo a perder</strong>
-            </h4>
+                    <h4 class="ms-layer stext7"
+                        style="left: 130px; top: 420px;"
+                        data-type="text"
+                        data-duration="900"
+                        data-delay="2500"
+                        data-ease="easeOutExpo"
+                        data-effect="bottom(40)"
+                    >
+                        <strong>Sistema de Gestão Empresarial para quem não tem tempo a perder</strong>
+                    </h4>
 
-            <div class="ms-layer"
-                 style="left: 130px; top: 510px;"
-                 data-type="text"
-                 data-delay="3500"
-                 data-ease="easeOutExpo"
-                 data-duration="900"
-                 data-effect="scale(1.5,1.6)"
-            >
-                <a href="{{ path('site_experimente') }}" class="sbutton4">Experimente Agora</a>
+                    <div class="ms-layer"
+                         style="left: 130px; top: 510px;"
+                         data-type="text"
+                         data-delay="3500"
+                         data-ease="easeOutExpo"
+                         data-duration="900"
+                         data-effect="scale(1.5,1.6)"
+                    >
+                        <a href="{{ path('site_contato') }}" class="sbutton4">Experimente Agora</a>
+                    </div>
+
+                </div>
+                <!-- end of slide -->
+            {% endfor %}
+        {% else %}
+            <!-- slide -->
+            <div class="ms-slide slide-1" data-delay="8">
+                <img src="{{ asset('site/assets/images/sliders/master/slide-bg1.jpg') }}" alt=""/>
+                <h1 class="ms-layer stext6"
+                    style="left: 130px; top: 335px;"
+                    data-type="text"
+                    data-duration="900"
+                    data-delay="1400"
+                    data-ease="easeOutExpo"
+                    data-effect="bottom(40)"
+                >
+                    Tenha <strong><em>Controle Total</em></strong> Sobre sua Empresa{#<br>
+                <strong>Nós Temos a <em>Solução</em></strong>#}
+                </h1>
+                <h4 class="ms-layer stext7"
+                    style="left: 130px; top: 420px;"
+                    data-type="text"
+                    data-duration="900"
+                    data-delay="2100"
+                    data-ease="easeOutExpo"
+                    data-effect="bottom(40)"
+                >
+                    <strong>Sistema de Gestão Empresarial para quem não tem tempo a perder</strong>
+                </h4>
+                <div class="ms-layer"
+                     style="left: 130px; top: 510px;"
+                     data-type="text"
+                     data-delay="3100"
+                     data-ease="easeOutExpo"
+                     data-duration="900"
+                     data-effect="scale(1.5,1.6)"
+                >
+                    <a href="{{ path('site_experimente') }}" class="sbutton4">Experimente Agora</a>
+                </div>
             </div>
-
-        </div>
-        <!-- end of slide -->
+            <!-- end of slide -->
+        {% endif %}
 
         <!-- slide -->
         {#<div class="ms-slide slide-3" data-delay="8">
@@ -108,8 +148,6 @@
 
         </div>#}
         <!-- end of slide -->
-
-
     </div>
 
 </div>
