--- a/app/Resources/views/site/homepage/index.html.twig
+++ b/app/Resources/views/site/homepage/index.html.twig
@@ -13,7 +13,7 @@
 
 {% block main_container %}
 
-    {% include(':site/_partials:_banner.html.twig') %}
+    {% include 'site/_partials/_banner.html.twig' with banners  %}
 
     <div class="clearfix"></div>
 
