--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -79,7 +79,7 @@
                      data-duration="900"
                      data-effect="scale(1.5,1.6)"
                 >
-                    <a href="{{ path('site_experimente') }}" class="sbutton4">Experimente Agora</a>
+                    <a href="{{ path('site_contato') }}" class="sbutton4">Experimente Agora</a>
                 </div>
             </div>
             <!-- end of slide -->
