--- a/app/Resources/views/admin/customer/edit.html.twig
+++ b/app/Resources/views/admin/customer/edit.html.twig
@@ -99,7 +99,7 @@
                     <div class="col-md-6">{{ form_row(form.publishedAt) }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">{{ form_row(form.text)}}) }}</div>
+                    <div class="col-md-12">{{ form_row(form.text)}}</div>
                 </div>
             </div>
         {% endblock %}
