--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -147,7 +147,7 @@
                     <li>
                         <a href="{% if customer.url is not null %}{{ customer.url }}{% else %}#{% endif %}"
                            target="_blank">
-                            <img src="{{ vich_uploader_asset(customer, 'imageFile') }}" alt="">
+                            <img src="{{ vich_uploader_asset(customer, 'imageFile') }}" alt="" style="max-width: 188px; height: 50px">
                         </a>
                     </li>
                 {% endfor %}
