tamanho da imagem

--- a/app/Resources/views/site/downloads/index.html.twig
+++ b/app/Resources/views/site/downloads/index.html.twig
@@ -19,7 +19,8 @@
 
             <h4>{{ d.description }}</h4>
 
-            <img src="{{ vich_uploader_asset(d, 'imageFile') }}" alt="{{ d.imageName }}" class="img_left1"/>
+            <img src="{{ vich_uploader_asset(d, 'imageFile') }}" alt="{{ d.imageName }}" class="img_left1"
+                 style="max-width: 361px; max-height: 180px"/>
 
             <p>{{ d.text }}</p>
 
