--- a/app/Resources/views/site/homepage/index.html.twig
+++ b/app/Resources/views/site/homepage/index.html.twig
@@ -159,7 +159,8 @@
             var slider = new MasterSlider();
             slider.setup('masterslider', {
                 width: 1270,    // slider standard width
-                height: 720,   // slider standard height
+                //height: 720,   // slider standard height
+                autoHeight: true,
                 space: 0,
                 speed: 45,
                 fullwidth: true,
